# BRAIN-RFSN

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_GUIDE.md  DELIVERY_MANIFEST.md  Dockerfile.sandbox  FILE_MANIFEST.txt  LICENSE  QUICKSTART.md  README.md  RFSN_README.md  TASK_STATUS.md  TESTING_GUIDE.md  WALKTHROUGH.md  best_build_agent.py  context_builder.py  docker_runner.py  main_simulation.py  modes.py  plan_replication.py  project_tree.txt  pyproject.toml  pytest.ini  quickstart.sh  requirements-dev.txt  requirements.txt  rfsn_cli.py  rfsn_replay.py  rfsn_run.py  rfsn_swe_agent.py  rfsn_swe_llm.py  run_agent.py  run_r1_benchmarks.py  run_ui.sh  swebench_runner.py  swebench_tasks.py  swebench_utils.py  tasks_example.jsonl  verify_ui_backend.py  web_interface.py
benchmarks/: __init__.py  gaia_runner.py  swebench_runner.py
cognitive/: capsule_memory_core.py  episodic_memory.py  hierarchical_planner.py  memory_consolidation.py  proactive_output_engine.py  reasoning_engine.py  recursive_identity_feedback.py  self_improvement.py  symbolic_emotion_binder.py  task_graph.py
consciousness/: dream_reality_sync.py  memory_pruner.py  mirror_identity_kernel.py  neuro_modulator.py  nightmare_protocol.py
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md  TESTING_GUIDE.md
gaia_results/: run_1217df3facb8.json  run_3fe4331c2afe.json  run_5f15196bba51.json  run_cbedb8cb010d.json  run_cf048fff6817.json
learning/: knowledge_base.py
memory/: core_beliefs.py  vector_store.py
operations/: replication_manager.py
plans/: REPLICATION_PLAN.md
rfsn_companion/: __init__.py  proposer.py  proposer_variants.py  strategies.py
rfsn_controller/: llm_client.py
rfsn_kernel/: __init__.py  config.py  controller.py  envelopes.py  gate.py  ledger.py  logging.py  patch_apply.py  patch_safety.py  policy.py  replay.py  types.py
security/: advanced_sandbox.py  behavioral_monitor.py  prompt_injection_shield.py
swebench_results/: run_61294374f53d.json  run_6a6d1b8d1cc2.json  run_e0c6b7f00bf9.json
tests/: conftest.py  test_agent_smoke.py  test_bandit_memory.py  (+54 more)
(+77 files in other folders)
